--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,11 @@
-body {
-  background pink;
-}
-
 h1 {
-  color: blue;
-  fontsize: 3em; 
-}
-
-h2 {
-  color: green;
-  font-weight: normal
-  font-style: italic;
-}
-
-.completed {
-  font-family: 12px;
-}
-
-#tasks .completed {
-  backgound: #ccc;
-  text-decoration: underline;
-}
+  color : blue;
+  }
+  h2 {
+  color : green;
+  font-weight : normal;
+  font-style : italic;
+  }
+  #tasks .completed {
+  text-decoration : underline;
+  }
